# viet_address_extractor

./: .gitignore  GettingStarted.ipynb  README.md  TEAM_THREE.xlsx  address_parser.py  extractor.py  list_district_example.txt  list_province_example.txt  list_ward.txt  list_ward_example.txt  list_ward_old.txt  optimization_results.json  pyproject.toml  requirements.txt  score_calculator.py  setup.py  test.json  test_runner.py  tests.py
examples/: abbreviation_handling.py  diacritic_handling.py  example_simple.py  example_with_options.py  example_with_own_list.py  scoring_examples.py
tests/: test_address_classifier.py
vietnamese_address_classification/: __init__.py  classifier.py
vietnamese_address_classification.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
vietnamese_address_classification/data/: list_district.txt  list_province.txt
vietnamese_address_classification/src/core/: scoring.py  trie.py  validator.py
vietnamese_address_classification/src/data/: data_loader.py
vietnamese_address_classification/src/utils/: abbreviation_expander.py  ambiguousness.py  fuzzy.py  normalization.py
