[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "vietnamese_address_classification"
version = "0.1"
description = "A package for parsing and classifying Vietnamese addresses"
authors = [
    { name = "XDcobra", email = "your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    "rapidfuzz>=3.0.0"
]
license = { file = "LICENSE" }

[project.urls]
Homepage = "https://github.com/XDcobra/vietnamese_address_classification"
"Bug Tracker" = "https://github.com/yourusername/vietnamese_address_classification/issues" 